# nexhacks

./: README.md
ai-persona/: .env.example  .pickle_settings.json  README.md  TESTING.md  pyproject.toml  reproduce_join.py  run.sh
ai-persona/config/: settings.py
ai-persona/src/persona/: main.py  orchestrator.py
ai-persona/src/persona/brain/: assembler.py  context_manager.py  llm_client.py  persona_engine.py
ai-persona/src/persona/brain/memory/: __init__.py  long_term.py
ai-persona/src/persona/inputs/: __init__.py  twitch_chat.py  vision.py
ai-persona/src/persona/outputs/: __init__.py  avatar.py  tts.py
ai-persona/src/persona/web/: server.py
ai-persona/src/persona/web/static/: overlay.html
ai-persona/vision-server/: server.js
pickle-ai/: .gitignore  .pickle_settings.json  README.md  TECHNICAL_DOCUMENTATION.md  TESTING.md  generate_token.py  pyproject.toml  run.sh  technical_architecture.md  verify_token.py
pickle-ai/config/: settings.py
pickle-ai/config/personas/: default.yaml
pickle-ai/data/chromadb/: chroma.sqlite3
pickle-ai/src/persona/: main.py  orchestrator.py
pickle-ai/src/persona/brain/: __init__.py  assembler.py  compressor.py  llm_client.py  persona_engine.py
pickle-ai/src/persona/brain/memory/: long_term.py  short_term.py
pickle-ai/src/persona/inputs/: base.py  speech.py  twitch_auth.py  twitch_chat.py  vision.py
pickle-ai/src/persona/outputs/: avatar.py  tts.py
pickle-ai/src/persona/utils/: logging.py
pickle-ai/src/persona/web/: server.py  settings_manager.py
pickle-ai/src/persona/web/static/: avatar.glb  overlay.html
pickle-ai/vision-server/: .gitignore  package.json  server.js  vision-client.html
(+21 files in other folders)
